--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ dmypy.json
 cython_debug/
 
 # TMP files from project
-tmp/main_page_source.html
+tmp/*
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
